Ignore machines not seen for 24 hours. Show LAA MACs in gray.

--- a/site.css
+++ b/site.css
@@ -96,6 +96,10 @@ code {
   background-color: #FFCCCC;
 }
 
+.machine-local-address {
+  background-color: #EEEEEE;
+}
+
 .legend-table {
   font-size: calc(4px + 1vmin);
   border-collapse: collapse;
